[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-detox-coach"
version = "1.0.0"
description = "AI Digital Detox Coach using Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=20.1.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
digital-detox = "app:main"
openenv-run = "inference:run_inference"

[project.urls]
Homepage = "https://github.com/Aditi1817/digital-detox-coach"
